--- a/DreamCareer/base.Master
+++ b/DreamCareer/base.Master
@@ -28,7 +28,7 @@
             </li>
 
             <li>
-                <a class="link-button" href="" runat="server">
+                <a class="link-button" href="Login.aspx" runat="server">
                     Login
                 </a>
             </li>
@@ -42,6 +42,12 @@
             <li>
                 <a class="link-button" href="CreateProfile.aspx" runat="server">
                     Create Profile
+                </a>
+            </li>
+
+            <li>
+                <a class="link-button" href="Admin.aspx" runat="server">
+                    Admin
                 </a>
             </li>
 
