--- a/DreamCareer/static/css/base.css
+++ b/DreamCareer/static/css/base.css
@@ -24,6 +24,14 @@ body {
     padding: 0px;
 }
 
+#logo {
+    color: white;
+    position: absolute;
+    right: 100px;
+    top: -30px;
+    font-size: 30px;
+}
+
 a.link-button {
     background-color: darkgray;
     color: black;
