--- a/DreamCareer/base.Master
+++ b/DreamCareer/base.Master
@@ -11,6 +11,9 @@
     <!-- css and javascript -->
     <link rel="Stylesheet" href="~/static/css/base.css" />
 
+    <script src="scripts/jquery-2.2.3.min.js"
+        type="text/javascript"></script>
+
     <asp:ContentPlaceHolder ID="head" runat="server">
         <!-- For 'children' pages -->
     </asp:ContentPlaceHolder>
