--- a/DreamCareer/static/css/base.css
+++ b/DreamCareer/static/css/base.css
@@ -9,7 +9,6 @@ body {
     left: 0px;
     right: 0px;
     background-color: black;
-    margin: 0px;
 }
 
 #toolbar li {
@@ -27,7 +26,7 @@ body {
 #logo {
     color: white;
     position: absolute;
-    right: 100px;
+    right: 10%;
     top: -30px;
     font-size: 30px;
 }
@@ -52,6 +51,6 @@ a, a:visited {
 }
 
 #child-content {
-    padding-top: 40px
+    padding-top: 60px;
 }
 
