--- a/DreamCareer/static/css/home.css
+++ b/DreamCareer/static/css/home.css
@@ -1,5 +1,34 @@
 ﻿
+.italics {
+    font-style: italic;
+}
 
-#page-header {
-    background-color: red;
+#page-title-div {
+    margin-top: 10%;
+    text-align: center;
+    font-size: 100%;
+}
+
+#search-bar-div {
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+}
+
+.search-bar-label-class {
+    font-size: 100%;
+    text-align: center;
+}
+
+.inline-button {
+    display: inline;
+    margin-left: 10%;
+    margin-right: 10%;
+    min-width: 150px;
+}
+
+.search-bar-class {
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 5%
 }
