--- a/DreamCareer/static/css/Create Profile.css
+++ b/DreamCareer/static/css/Create Profile.css
@@ -48,7 +48,7 @@ h2{
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content p {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -56,7 +56,7 @@ h2{
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content p:hover {background-color: #f1f1f1}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
