--- a/DreamCareer/static/css/CreateUser.css
+++ b/DreamCareer/static/css/CreateUser.css
@@ -1,10 +1,12 @@
-﻿
+﻿body{
+    background-color: orange;
+}
 #submit-button-container {
 
 }
 
 #create-new-user-table {
-    padding-left: 10%
+    padding-left: 39%
 }
 
 #new-user-table-div {
@@ -12,6 +14,7 @@
 }
 
 .submit-button {
+    height: 200%;
     width: 100%;
 }
 
@@ -24,10 +27,11 @@
 }
 
 td {
-    padding-right: 25px;
+    padding-top: 20px;
+    padding-right: 40px;
 }
 
 td p {
-    padding-bottom: 10px;
+    padding-bottom: 1px;
     text-align: right;
 }
