--- a/DreamCareer/static/css/base.css
+++ b/DreamCareer/static/css/base.css
@@ -32,8 +32,9 @@ body {
 }
 
 a.link-button {
-    background-color: darkgray;
-    color: black;
+    background-color: black;
+    color: white;
+    font-weight: 500;
     padding-top: 16px;
     padding-bottom: 16px;
     padding-left: 10px;
