--- a/DreamCareer/static/css/home.css
+++ b/DreamCareer/static/css/home.css
@@ -1,4 +1,6 @@
-﻿
+﻿body{
+    background-color: orange;
+}
 .italics {
     font-style: italic;
 }
@@ -6,7 +8,7 @@
 #page-title-div {
     margin-top: 10%;
     text-align: center;
-    font-size: 100%;
+    font-size: 150%;
 }
 
 #search-bar-div {
@@ -28,7 +30,8 @@
 }
 
 .search-bar-class {
-    width: 100%;
+    width: 80%;
+    height: 30px;
     margin-top: 3%;
     margin-bottom: 5%
 }
