--- a/DreamCareer/static/css/Profile.css
+++ b/DreamCareer/static/css/Profile.css
@@ -7,12 +7,22 @@
     color:black;
 }
 
-#test {
-    background-color:aqua;
-}
+
 
 #title {
     text-align:center;
+}
+
+.profile-label {
+    height:200%;
+    line-height:600%;
+    text-align:center;
+    font-size:x-large;
+    color: black;
+    padding-left:800px;
+    padding-right:800px;
+    margin-top:50px;
+    margin-right:200px;
 }
 
 /* Change color of dropdown links on hover */
