--- a/DreamCareer/base.Master
+++ b/DreamCareer/base.Master
@@ -49,7 +49,7 @@
             </li>
 
             <li>
-                <a class="link-button" href="Position.aspx" runat="server">
+                <a class="link-button" href="CreateCompany.aspx" runat="server">
                     Create Company
                 </a>
             </li>
