--- a/DreamCareer/static/css/base.css
+++ b/DreamCareer/static/css/base.css
@@ -1,5 +1,18 @@
 ﻿
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
 body {
+    animation-name: fade-in;
+    animation-duration: 2s;
     margin: 0px;
 }
 
