--- a/DreamCareer/base.Master
+++ b/DreamCareer/base.Master
@@ -60,6 +60,11 @@
                     Create Position
                 </a>
             </li>
+            <li>
+                <a class="link-button" href="ViewPosition.aspx" runat="server">
+                    View Position
+                </a>
+            </li>
 
             <li>
                 <a class="link-button" href="Admin.aspx" runat="server">
