Connected the search with the view stuff. No heavy testing but the links it gives you seem to work just fine

--- a/DreamCareer/static/css/home.css
+++ b/DreamCareer/static/css/home.css
@@ -11,7 +11,7 @@
     font-size: 150%;
 }
 
-#search-bar-div {
+#search-bar-div, #button-div {
     margin-left: 20%;
     margin-right: 20%;
     text-align: center;
