Added a base class to user pages, a couple small bug fixes

--- a/DreamCareer/base.Master
+++ b/DreamCareer/base.Master
@@ -26,86 +26,81 @@
         <div id="toolbar">
             <ul id="toolbar-links">
 
+                <% if (this.IsUser)
+                    { %>
                 <li>
-                    <a class="link-button" href="Default.aspx" runat="server">
-                        Home
+                    <a class="link-button" href="Default.aspx" runat="server">Home
                     </a>
                 </li>
-
-                <% if (!this.IsUser)
-                    { %>
-                    <li>
-                        <a class="link-button" href="Login.aspx" runat="server">
-                            Login
-                        </a>
-                    </li>
                 <% } %>
 
                 <% if (!this.IsUser)
                     { %>
-                    <li>
-                        <a class="link-button" href="CreateUser.aspx" runat="server">
-                            Create User
-                        </a>
-                    </li>
+                <li>
+                    <a class="link-button" href="Login.aspx" runat="server">Login
+                    </a>
+                </li>
+                <% } %>
+
+                <% if (!this.IsUser)
+                    { %>
+                <li>
+                    <a class="link-button" href="CreateUser.aspx" runat="server">Create User
+                    </a>
+                </li>
                 <% } %>
 
                 <% if (this.IsUser && !this.HasProfile)
                     { %>
-                    <li>
-                        <a class="link-button" href="CreateProfile.aspx" runat="server">
-                            Create Profile
-                        </a>
-                    </li>
+                <li>
+                    <a class="link-button" href="CreateProfile.aspx" runat="server">Create Profile
+                    </a>
+                </li>
                 <% } %>
 
                 <% if (this.IsUser)
                     { %>
                 <li>
-                    <a class="link-button" href="CreateCompany.aspx" runat="server">
-                        Create Company
+                    <a class="link-button" href="CreateCompany.aspx" runat="server">Create Company
                     </a>
                 </li>
                 <% } %>
-                
+
                 <% if (Session["username"] != null && Session["username"].ToString() == "coleman")
                     { %>
                 <li>
-                    <a class="link-button" href="Admin.aspx" runat="server">
-                        Admin
+                    <a class="link-button" href="Admin.aspx" runat="server">Admin
                     </a>
                 </li>
                 <% } %>
 
                 <% if (this.IsUser)
                     { %>
-                    <li>
-                        <asp:LinkButton runat="server"
-                            ID="LogoutButton"
-                            CssClass="link-button"
-                            OnClick="LogoutButton_OnClick">
+                <li>
+                    <asp:LinkButton runat="server"
+                        ID="LogoutButton"
+                        CssClass="link-button"
+                        OnClick="LogoutButton_OnClick">
                             Logout
-                        </asp:LinkButton>
-                    </li>
+                    </asp:LinkButton>
+                </li>
                 <% } %>
 
 
-                <% if (this.IsUser) { %>
-                    <li>
-                        <a class="user-button" href="ViewProfile.aspx" runat="server">
-                            Welcome back <%:Session["username"] %>!
-                        </a>
-                    </li>
+                <% if (this.IsUser)
+                    { %>
+                <li>
+                    <a class="user-button" href="ViewProfile.aspx" runat="server">Welcome back <%:Session["username"] %>!
+                    </a>
+                </li>
                 <% } %>
-
             </ul>
         </div>
-    
+
         <div id="child-content">
             <asp:ContentPlaceHolder ID="ContentPlaceHolderBody" runat="server">
-            
-                <h1>
-                    Header
+
+                <h1>Header
                 </h1>
                 <p>
                     Content
