--- a/DreamCareer/static/css/home.css
+++ b/DreamCareer/static/css/home.css
@@ -11,6 +11,22 @@
     font-size: 150%;
 }
 
+#page-header-text:before {
+    content: '';
+    background-color: black;
+    display: block;
+}
+
+#page-header-text:after {
+    content: '';
+    background-color: black;
+    display: block;
+}
+
+#page-header-text {
+    text-shadow: 40px 20px 10px #000;
+}
+
 #search-bar-div, #button-div {
     margin-left: 20%;
     margin-right: 20%;
